# stellar-outpost

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
discovery/: chat1.md  domain.md  exploration-mission.md  lore-and-missions.md  mining-missions.md  modules.md  npc-generation.md  quests.md
src/: app.rs  main.rs
src/domain/: crew.rs  mod.rs  outpost.rs  resources.rs  status_effect.rs
src/domain/modules/: farm.rs  holo_deck.rs  living_quarters.rs  mine.rs  mod.rs  power_generator.rs  water_extractor.rs
src/model/: crew.rs  game_state.rs  mod.rs  outpost.rs  region.rs  resources.rs  sector.rs  stats.rs
src/model/modules/: farm.rs  holo_deck.rs  living_quarters.rs  mine.rs  mod.rs  power_generator.rs  water_extractor.rs
