[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
catppuccin = "1.2.1"
crossterm = "0.20"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
unicode-width = "0.1"
